cmake_minimum_required(VERSION 2.8.3)
project(vision)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#set(OpenCV_DIR $ENV{HOME}/installation/OpenCV-4.1.1/lib/cmake/opencv4)
find_package(catkin REQUIRED COMPONENTS roscpp std_msgs OpenCV cv_bridge)
#find_package(OpenCV REQUIRED)
#find_package(cv_bridge REQUIRED)
catkin_package()
set(SOURCE_FILES src/img_conv_node/img_conv_node.cpp src/camera_node/camera_node.cpp)
add_executable(${PROJECT_NAME}_node ${SOURCE_FILES})
include_directories(${catkin_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES})
