<?xml version="1.0"?>
<package format="2">
    <name>vision</name>
    <version>0.0.0</version>
    <description>The vision package</description>
    <maintainer email="bo@todo.todo">bo</maintainer>
    <license>TODO</license>
    <build_depend>message_generation</build_depend>
    <build_export_depend>message_generation</build_export_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>message_runtime</exec_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>libpcl-all</exec_depend>
    <exec_depend>pcl_msgs</exec_depend>
    <export>
    </export>
</package>
